# lubancat_sg2000_application_code

./: .gitignore  .gitlab-ci.yml  README.md
examples/: README.md
examples/mobilenetv2/: CMakeLists.txt  build.sh  mobilnetv2.cpp  mobilnetv2_fused_preprocess.cpp
examples/resnet18/: CMakeLists.txt  resnet18.cpp
examples/yolov3/: CMakeLists.txt  build.sh  yolov3.cpp
examples/yolov5/: CMakeLists.txt  yolov5.cpp
examples/yolov8/: CMakeLists.txt  yolov8.cpp
extra_example/: README.md
extra_example/mmf/: CMakeLists.txt  build.sh  video_dec_display.c
tpu_sdk/aarch64/lib/: libavcodec.so.58.106.100  libavformat.so.58.58.100  libavutil.so.56.59.100  libcrypto.so.1.1  libcvi_json-c.so.5.1.0  libsqlite3.so.0.8.6  libswresample.so.3.8.100  libuv.so.1.0.0  libwebsockets.so.17
tpu_sdk/aarch64/lib/cmake/nanomsg-1.1.5-14-gcc19ff6/: nanomsg-target.cmake
tpu_sdk/aarch64/lib/pkgconfig/: libwebsockets.pc  libwebsockets_static.pc  nanomsg.pc
tpu_sdk/aarch64/opencv/include/opencv2/: cvconfig.h
tpu_sdk/aarch64/share/libwebsockets-test-server/: libwebsockets-test-server.key.pem  libwebsockets-test-server.pem
tpu_sdk/aarch64/share/man/man1/: ca.1  ciphers.1  cms.1  crl2pkcs7.1  dgst.1  dsaparam.1  ecparam.1  errstr.1  genpkey.1  genrsa.1  list.1  nseq.1  pkcs12.1  pkcs8.1  pkey.1  pkeyutl.1  prime.1  rehash.1  s_server.1  smime.1  storeutl.1  ts.1  version.1  x509.1
tpu_sdk/aarch64/share/man/man3/: ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_TIME_set.3  ASN1_generate_nconf.3  ASYNC_WAIT_CTX_new.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_null.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_parse_hostserv.3  BIO_push.3  BIO_read.3  BIO_s_file.3  BIO_s_null.3  BIO_s_socket.3  BIO_set_callback.3  BN_add.3  BN_add_word.3  BN_cmp.3  BN_copy.3  BN_mod_mul_montgomery.3  BN_mod_mul_reciprocal.3  BN_new.3  BN_rand.3  BN_security_bits.3  BN_swap.3  BN_zero.3  BUF_MEM_new.3  CMS_add0_cert.3  CMS_add1_recipient_cert.3  CMS_decrypt.3  CMS_get0_RecipientInfos.3  CMS_get0_SignerInfos.3  CMS_get1_ReceiptRequest.3  CMS_sign.3  (+205 more)
tpu_sdk/aarch64/share/man/man7/: RAND.7  RSA-PSS.7  X25519.7  bio.7  crypto.7  evp.7  ossl_store-file.7  ossl_store.7  ssl.7  x509.7
tpu_sdk/musl_riscv64/lib/: libcrypto.so.1.1
tpu_sdk/musl_riscv64/lib/cmake/libwebsockets/: libwebsockets-config-version.cmake
tpu_sdk/musl_riscv64/share/libwebsockets-test-server/: libwebsockets-test-server.key.pem  libwebsockets-test-server.pem
tpu_sdk/musl_riscv64/share/man/man1/: CA.pl.1  asn1parse.1  crl.1  dhparam.1  dsa.1  ec.1  enc.1  engine.1  gendsa.1  ocsp.1  openssl.1  passwd.1  pkcs7.1  pkeyparam.1  rand.1  req.1  rsa.1  rsautl.1  s_client.1  s_time.1  sess_id.1  speed.1  spkac.1  srp.1  tsget.1  verify.1
tpu_sdk/musl_riscv64/share/man/man3/: ADMISSIONS.3  ASN1_INTEGER_get_int64.3  ASN1_ITEM_lookup.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TYPE_get.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDR.3  BIO_f_md.3  BIO_f_ssl.3  BIO_find_type.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_printf.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_mem.3  BIO_should_retry.3  BN_BLINDING_new.3  BN_CTX_new.3  BN_CTX_start.3  BN_bn2bin.3  BN_generate_prime.3  BN_mod_inverse.3  BN_num_bytes.3  BN_set_bit.3  CMS_add1_signer.3  CMS_compress.3  CMS_encrypt.3  CMS_final.3  CMS_get0_type.3  CMS_sign_receipt.3  CMS_uncompress.3  CMS_verify_receipt.3  CRYPTO_memcmp.3  (+182 more)
tpu_sdk/musl_riscv64/share/man/man5/: config.5  x509v3_config.5
tpu_sdk/musl_riscv64/share/man/man7/: Ed25519.7  RAND_DRBG.7  SM2.7  ct.7  des_modes.7  passphrase-encoding.7  proxy-certificates.7  scrypt.7
